--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>harmony-echo-studio-mobile</title>
-    <meta name="description" content="Mobile karaoke and music studio app" />
+    <title>Karaoke Studio</title>
+    <meta name="description" content="Simple karaoke recording studio" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="harmony-echo-studio-mobile" />
-    <meta property="og:description" content="Mobile karaoke and music studio app" />
+    <meta property="og:title" content="Karaoke Studio" />
+    <meta property="og:description" content="Simple karaoke recording studio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
